@@ -1,3 +1,11 @@
+Tue May 15 19:39:55 UTC 2007  Ciju John  <johnc at ociweb dot com>
+
+        * dds/InfoRepo/DCPSInfoRepo.cpp:
+          Rename variables to descriptive names.
+
+        * dds/InfoRepo/PersistenceUpdater.cpp:
+          removed couple of debug messages.
+
 Tue May 15 15:47:07 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * tests/DCPS/DcpsIntegration/run_test-integration.pl:
